--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,14 @@ yarn-error.log*
 
 # Editor directories and files
 .idea
+.DS_Store
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.idea
 .vscode
 *.suo
 *.ntvs*
